# gyr

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  config.toml
src/: apps.rs  cli.rs  event.rs  input.rs  main.rs  ui.rs  xdg.rs
