[package]
name = "gyr"
version = "0.1.1"
authors = ["Namkhai B. <me@forkbomb9.ch>"]
edition = "2018"

description = "Blazing fast TUI launcher for GNU/Linux and *BSD"

repository = "https://sr.ht/~forkbomb9/gyr/"
readme = "README.md"
keywords = ["tui", "tools"]
license = "BSD-2-Clause"

[profile.release]
lto = true

[dependencies]
eyre = "0.6"
lexopt = "0.2"
directories = "4.0"
dirs = "4.0"
fuzzy-matcher = "0.3"
libc = "0.2"
safe-regex = "0.2"
serde = { version = "1", features = ["derive"] }
shell-words = "1.0"
sled = "0.34"
termion = "1.5"
toml = "0.5"
tui = { version = "0.18", default-features = false, features = ["termion"] }
walkdir = "2.3"
