[package]
name = "gyr"
version = "0.1.5"
authors = ["Namkhai B. <nk@nkeor.me>"]
edition = "2021"

description = "Blazing fast TUI launcher for GNU/Linux and *BSD"

homepage = "https://sr.ht/~nkeor/gyr/"
repository = "https://git.sr.ht/~nkeor/gyr/"
readme = "README.md"
keywords = ["tui", "tools"]
categories = ["os"]
license = "BSD-2-Clause"

[profile.release]
lto = true
strip = true

[dependencies]
eyre = "0.6"
lexopt = "0.3"
directories = "5.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
libc = "0.2"
safe-regex = "0.2"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.0"
sled = "0.34"
termion = "2.0"
toml = "0.7"
ratatui = { version = "0.23.0", default-features = false, features = ["termion"]}
walkdir = "2.3"
